k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-autentificacion
  namespace: ambulancia-system
  labels:
    app: ms-autentificacion
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: php-fpm
  selector:
    app: ms-autentificacion
  sessionAffinity: None
